@@ -26,6 +26,7 @@ THE SOFTWARE.
 #include "flusspferd/system.hpp"
 #include "flusspferd/object.hpp"
 #include "flusspferd/create.hpp"
+#include "flusspferd/version.hpp"
 #include "flusspferd/io/stream.hpp"
 #include <iostream>
 #include <ostream>
@@ -99,6 +100,16 @@ void flusspferd::load_system_module(object &context) {
   exports.define_property(
     "args",
     create_array(),
+    read_only_property | permanent_property);
+
+  exports.define_property(
+    "platform",
+    value("flusspferd"),
+    read_only_property | permanent_property);
+
+  exports.define_property(
+    "xFlusspferdVersion",
+    value(flusspferd::version()),
     read_only_property | permanent_property);
 }
 
